syntax = "proto3";

package yir.s3upload;

option go_package = "yir/s3upload/api;api";

service S3Upload {
    rpc UploadAndSplitUziFile(stream ImageStream) returns (UploadUziFileResponse);

    rpc GetByPathImage(GetImageRequest) returns (stream ImageStream);
}

message ImageStream {
    bytes file = 1;
}

message UploadUziFileResponse {
    string uzi_id = 1;
    repeated string images_ids = 2;
}

message GetImageRequest {
    string path = 1;
}